# prismaid

./: .Rbuildignore  .gitignore  CHANGELOG  CHANGELOG.md  CITATION.cff  DESCRIPTION  Dockerfile.prismaid-mcp  LICENSE  NAMESPACE  README.md  SECURITY.md  doc.go  generate.go  generate_screening.go  generate_screening_test.go  generate_test.go  generate_zotero.go  generate_zotero_test.go  go.mod  go.sum  launch.json.template  paper.bib  paper.md  prismAId.go  prismAId_test.go  prismaid.go  review.go  review_test.go  server.json  test.sh  tika-service.sh
.github/codeql/: codeql.yml
.github/workflows/: build_binaries.yml  build_python.yml  build_shared.yml  draft_pdf.yml  go.yml  publish-mcp.yml  register-julia-package.yml  rel_to_matrix.yml  rhub.yaml  temp.yaml  temp.yml  test.yml  test_build_shared.yml  test_rpackage.yml
R/: wrapper.R
check/: doc.go  limits.go  model.go  user.go
cmd/: main.go  main_test.go
cmd/prismaid-mcp/: main.go  mcp_live_test.go
config/: configuration.go  configuration_test.go
conformance/: conformance.go  conformance_test.go
conversion/: doc.go  logic.go  logic_test.go
conversion/doc/: docx2txt.go  docx2txt_test.go
conversion/html/: html2txt.go  html2txt_test.go
conversion/ocr/: tika.go  tika_test.go
conversion/pdf/: pdf2txt.go  pdf2txt_test.go
convert/: conversion.go  conversion_test.go  doc.go  pdf2txt.go
convert/file/: conversion.go  conversion_test.go  doc.go  docx2txt.go  html2txt.go  pdf2txt.go
cost/: cents.go
debug/: duplicate.go
docs/: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  _config.yml  additional-setup.md  config-generator.md  conformance.md  convert-tool.md  development.md  download-tool.md  for-developers.md  getting-started.md  guidance.md  help-development.md  help-resources.md  help.md  index.md  installation-setup.md  mcp-server.md  project-setup.md  recipes.md  research-development.md  review-configurator.md  review-support.md  review-tool.md  screening-tool.md  setup-overwiew.md  support.md  using-prismaid.md
docs/Review/: review-workflow.md
docs/_layouts/: default.html
docs/filters/: article-type.md  deduplication.md  language.md  topic-relevance.md
docs/installation/: additional-setup.md  cli-binaries.md  go.md  julia.md  python.md  r.md  setup-overview.md  setup-overwiew.md
docs/review/: revaise-integration.md  review-configurator.md  review-workflow.md
docs/support/: development.md  help.md
docs/tools/: convert-tool.md  download-tool.md  review-tool.md  screening-tool.md
download/: parse_list.go  url_list.go  url_list_test.go  url_to_pdf.go
download/list/: doc.go  url_list.go  url_list_test.go
download/zotero/: api.go  api_test.go  doc.go
init/: doc.go  terminal.go  terminal_test.go
julia/PRISMAID/: Manifest.toml  Project.toml  README.md
julia/PrismAId/: Manifest.toml  Project.toml  README.md
julia/PrismAIdConnect/: Project.toml  README.md
man/: RunReview.Rd
model/: deepseek.go  doc.go  llm.go
projects/: proj_test.toml  template.toml  url_list_test.txt  zotero-config.toml
projects/examples/: example_workflow.md
projects/templates/: review_template.toml  screening_template.toml  zotero_template.toml
prompt/: generator.go  generator_test.go
python/: MANIFEST.in  pyproject.toml  setup.py
python/prismaid/: __init__.py
r-package/: .Rbuildignore  DESCRIPTION  NAMESPACE  configure  generate-docs.R
r-package/R/: wrapper.R
r-package/man/: CheckConformance.Rd  Convert.Rd  DownloadURLList.Rd  DownloadZotero.Rd  DownloadZoteroPDFs.Rd  GenerateRevAIseRecord.Rd  MergeRecordStage.Rd  ProtocolGuidance.Rd  RevAIseSchema.Rd  RunReview.Rd  Screening.Rd  ValidateConfig.Rd  ValidateRecord.Rd
r-package/src/: Makevars  Makevars.win  R_wrapper.c  _cgo_export.h
r/prismaid/: .Rbuildignore  DESCRIPTION  NAMESPACE
results/: json.go  save.go
revaise/: config.go  doc.go  extraction.go  io.go  lifecycle.go  merge.go  output.go  record.go  record_new.go  revaise_test.go  schema.go  schema_test.go  screening.go
revaise/testdata/: revaise.schema.json
review/: doc.go  review.go  review_logic_test.go
review/config/: configuration.go  configuration_test.go  doc.go
review/debug/: duplicate.go  duplicate_test.go
review/logic/: doc.go  review_logic.go  review_logic_test.go
review/prompt/: generator.go  generator_test.go
review/results/: csv.go  csv_test.go  json.go  json_test.go  save.go  save_test.go
screening/filters/: article_type.go  article_type_test.go  deduplication.go  deduplication_test.go  (+5 more)
sharedlib/: export.go  export_test.go
src/: Makevars  R_wrapper.c  _cgo_export.h  libprismaid_windows_amd64.def
tokens/: quantification.go
zotero/: api.go  api_test.go  connection.go  doc.go
(+25 files in other folders)
